// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Navigation should match the exact snapshot with prev and next 1`] = `
<aside
  className="post_navigation"
>
  <div
    className="post_navigation__clear"
  />
  <div
    className="post_navigation__separator"
  />
</aside>
`;

exports[`Post Navigation should match the exact snapshot with prev and next 2`] = `
<aside
  className="post_navigation"
>
  <NavigationLink
    className="post_navigation__next"
    excerpt="prevExcerpt"
    icon="chevron_left"
    path="prevPath"
    title="prevTitle"
  />
  <NavigationLink
    className="post_navigation__prev"
    excerpt="prevExcerpt"
    icon="chevron_right"
    path="prevPath"
    title="prevTitle"
  />
  <div
    className="post_navigation__clear"
  />
  <div
    className="post_navigation__separator"
  />
</aside>
`;
